# goit-final-project

./: .dockerignore  01_train_model.py  02_streamlit.py  Dockerfile  main.py  pyproject.toml  requirements.txt  scaler.pkl
