[project]
name = "final_project"
version = "0.1.0"
description = "My final project"
authors = [
    {name = "Mariia Shmatkova"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "keras (>=3.14.1,<4.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "keras-tuner (>=1.4.8,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
